--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v2
 
-      - name: Deploy commands
+      - name: Pull and up docker
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -22,5 +22,6 @@ jobs:
           script: |
             cd /home/ubuntu/bussin_chess_backend
             git pull
+            sudo docker-compose build
             sudo docker-compose down
             sudo docker-compose up -d
