--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,6 @@ jobs:
           script: |
             cd /home/ubuntu/bussin_chess_backend
             git pull
-            sudo docker-compose build
-            sudo docker-compose down
-            sudo docker-compose up -d
+            docker-compose build
+            docker-compose down
+            docker-compose up -d
