--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,57 @@ version: '3'
 services:
   app:
     build: .
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    command: alembic upgrade head && uvicorn src.main:app --host 0.0.0.0 --port 8000;
+    environment:
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - DB_NAME=${DB_NAME}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
     ports:
       - 8000:8000
     volumes:
       - .:/src
+    networks:
+      - default-network
+    restart: unless-stopped
+    depends_on:
+      - db
+  
+  db:
+    image: postgres
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
+      PGDATA: /data/postgres
+    volumes:
+      - postgres:/data/postgres
+    ports:
+      - ${DB_PORT}:${DB_PORT}
+    networks:
+      - default-network
+    restart: unless-stopped
+  
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    volumes:
+       - pgadmin:/var/lib/pgadmin
+    ports:
+      - "${PGADMIN_PORT:-5050}:80"
+    networks:
+      - default-network
+    restart: unless-stopped
+    depends_on:
+      - db
+
+networks:
+  default-network:
+    driver: bridge
+
+volumes:
+    postgres:
+    pgadmin:
