--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3'
 services:
   app:
     build: .
-    command: alembic upgrade head && uvicorn src.main:app --host 0.0.0.0 --port 8000;
+    command: /bin/bash -c "alembic upgrade head && uvicorn src.main:app --host 0.0.0.0 --port 8000"
     environment:
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
