--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 asyncpg==0.29.0
 bcrypt==4.1.2
+bidict==0.23.1
 cffi==1.16.0
 click==8.1.7
 cryptography==42.0.5
@@ -26,8 +27,11 @@ pydantic==2.6.4
 pydantic_core==2.16.3
 PyJWT==2.8.0
 python-dotenv==1.0.1
+python-engineio==4.9.0
 python-multipart==0.0.9
+python-socketio==5.11.1
 PyYAML==6.0.1
+simple-websocket==1.0.0
 sniffio==1.3.1
 SQLAlchemy==2.0.28
 starlette==0.36.3
@@ -36,3 +40,4 @@ uvicorn==0.28.0
 uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
+wsproto==1.2.0
